--- a/Masterarbeit.tex
+++ b/Masterarbeit.tex
@@ -195,21 +195,67 @@ Comparison of spectra with HIJING models
 
 \chapter{The ALICE Experiment at CERN}
 %https://arxiv.org/pdf/1402.4476.pdf Performance of the ALICE Experiment at the CERN LHC
-
+The European Organization for Nuclear Research (CERN) was founded in 1954 with the aim of investigating the structure of matter beyond the atomic nuclei and, by that, providing answers to the most fundamental questions about the universe. This worldwide leading research organization is based in Geneva, where it brings together 23 European countries and physicists from all over the globe to collaborate in the study of the nature of fundamental particles. To this end, the organization operates several experiments, among which there are four of greatest importance: A Large Ion Collider Experiment (ALICE), A Toroidal LHC Apparatus (ATLAS), Compact Muon Solenoid (CMS) and Large Hadron Collider beauty (LHCb). All of them are located along the Large Hadron Collider (LHC), the most powerful accelerator in the world, in order to investigate the particle collisions that take place in it. \\
+The data used in this work was taken with the detectors of the ALICE experiment, which is dedicated to the study of strong interactions between deconfined quarks and gluons. This chapter will first go through general aspects of the LHC and then present a detailed description of the most significant ALICE detectors for the presented analysis as well as the most relevant data handling procedures, namely the reconstruction of trajectories or tracks of charged particles or the centrality determination in heavy ion collisions. 
 \section{The LHC}
+%https://home.cern/science/accelerators/large-hadron-collider
+%https://lhc-machine-outreach.web.cern.ch/
+%https://home.cern/science/accelerators/accelerator-complex
+%https://commons.wikimedia.org/wiki/File:LHC.svg 
+Since the start of its operations in 2008, the LHC has remained as the largest and most powerful accelerator ever built. Inside a 27-kilometre underground tunnel, beams of proton and heavy ions are accelerated by the LHC. The collisions systems studied in the LHC are proton-proton (pp), proton-lead (p-Pb), lead-lead (Pb-Pb) and xenon-xenon (Xe-Xe) collisions. All collision systems are characterized by the energy measured in the centre-of-mass reference frame available to produce new particles, the so-called center-of-mass energy $\sqrt{s}$, which is invariant under Lorentz Transformations. Since this quantity is calculated by means of the particle beam energy, collider experiments, such as the LHC, operate with higher center-of-mass energies than fixed-target experiments. During the first data taking period of the LHC (2009-2013), the LHC operated at a maximum of $\sqrt{s} = 8$ TeV (cite value) in pp collisions, which was a record value at the time. After an upgrade of the collider, the maximal centre-of-mass energy was increased to $\sqrt{s} = 13$ TeV in pp collisions during the second data taking period (2015-2018).\\ 
+The particle beams are accelerated gradually by the so-called CERN accelerator complex, which is a chain of accelerators and boosters, the LHC being the last step of the process. The proton source used for pp collisions is provided through the ionization of hydrogen gas with an electric field. The resulting protons are injected and boosted successively into the Linear accelerator 2 (Linac 2), the Proton Synchrotron Booster (PSB), the Proton Synchrotron (PS) and the  Super Proton Synchrotron (SPS). Here, the proton beams reach energies of 450 GeV before they are sent to the beam pipes of the LHC. In the case of lead ions, the source originates from vaporised lead and the resulting particles are boosted first in the Linac 3 and the Low Energy Ion Ring (LEIR), before they are injected into the PS. In Figure \ref{LHC}, a schematic view of the accelerator complex is shown. \\
+In the LHC, two particle beams are accelerated in opposite directions within the two beam pipes in which ultrahigh vacuum exists. A series of superconducting electromagnets produce a magnetic field capable to bend the particle beams around the accelerator. The magnets are connected to a liquid helium supply for cooling purposes. When the particle beams reach ultra-relativistic energies, they are brought to collision inside the four experiments introduced at the beginning of the chapter. As already mentioned, this work is based on data measured with the ALICE detectors, which are discussed in detail in the next section.
+
+\begin{figure}[tb!]
+\centering
+\includegraphics[width=12cm]{Plots/LHC.png}  
+\caption{Schematic design of the CERN accelerator complex (cite julius).}
+\label{LHC}
+\end{figure}
 \section{ALICE}
+%https://home.cern/science/experiments/alice
+%"The CERN large hadron collider : accelerator and experiments"
+ALICE is dedicated to the study of strong interacting matter at temperatures and densities high enough to presumably create a QGP. Hundreds of physicists from 30 different countries participate in the research of this extreme state of matter as part of the ALICE collaboration. The ALICE experiment covers the study of several observables. For instance, heavy flavour production and jet fragmentation serve as probe for the parton energy loss in the QGP. Moreover, the geometry of the collision volume is provided by the multiplicity and the transverse or zero-degree energy flow. The equation of state of the QGP as well as transport properties can be studied by means of the elliptic flow, which gives information of the anisotropy of azimuthal momentum space of the particles produced in ultra-relativistic collisions. In addition, quarkonia production represent an important tool for the study of the deconfined state and the parton recombination. Prompt photons probe the thermal radiation of early stages of the collisions.\\
+The ALICE detector system is located in the vicinity of St Genis-Pouilly in France and lies 54 m under the ground. It is 26 m long, 16 m high and 16 m wide and consists of 18 different detectors distributed in three main parts: the central barrel, which is the most relevant part for this work, the forward detectors and the forward muon spectrometer. \\
+The central barrel is a cylindric structure built around the beam pipe and installed within the solenoid magnet L3, which produces a magnetic field that bends the trajectory of charged particles. The detectors that compound the central barrel are, from the inside out, the Inner Tracking System (ITS), the Time Projection Chamber (TPC), the arrays of the Time-of-Flight (TOF), the High Momentum Particle Identification Detector (HMPID), the Transition Radiation Detector (TRD) and three electromagnetic calorimeters (EMCAL, DCAL and PHOS). In Figure \ref{ALICE}, the schematic design of the ALICE experiment is shown. \\
+The forward detectors are located at small angles along he beam pipe. The V0 detector is placed near the collision vertex and it is used to trigger events and determine the centrality in heavy-ion collisions. Furthermore, the Forward Multiplicity Detector (FMD), next to the V0, and the Photon Multiplicity Detector(PMD), mounted on the L3 magnet door, estimate the multiplicities of charged particles and of photons respectively. Finally, on both ends of the beam pipe the Zero-Degree Calorimeters (ZDC) measure spectator nucleons in heavy-ion collisions, which are required for centrality estimation. \\
+In this work, charged-particles \pt distributions in pp and for different centrality classes in Pb-Pb collisions are calculated. For this reason, the ITS and the TPC, which are the detectors used for the reconstruction of charged-particles tracks, as well as the V0 detector, required for the centrality estimation, will be discussed in the next sections. 
+\begin{figure}[tb!]
+\centering
+\includegraphics[width=15cm]{Plots/Alice.png}  
+\caption{Schematic layout of the ALICE detector (cite Tauro).}
+\label{ALICE}
+\end{figure}
 \subsection{ITS}
+%https://cds.cern.ch/record/1071641/files/p143.pdf
+The ITS is designed to complete a broad range of tasks, turns it into one of the most important and versatile detectors of the ALICE experiment. The detector contributes to the reconstruction of charged-particle tracks with low momentum and to the particle identification. Moreover, among its functions are the primary vertex reconstruction and the location of secondary vertices from decays of hyperons and particles carrying heavy flavour. The ITS also optimizes the impact parameter and momentum resolution. \\
+In order to complete these tasks, the detector is located in the immediate surroundings of the beam pipe. This also allows to provide mechanical support to stabilize the measurements during data taking. The ITS has a pseudorapidity coverage of $|\eta| < 0.9 $ and an overall radius of 51 cm. It is equipped with six layers that built three different subdetectors with radii between 4 and 43 cm. From the inside out, the subdetectors are the Silicon Pixel Detector (SPD), the Silicon Drift Detector (SDD) and the Silicon Strip Detector (SSD). Each of the layers \\
+At LHC energies, the track density and the radiation near the nominal interaction point reach extreme levels. The technical design of the SPD, which is compounded by the two innermost layers of the ITS, is optimized to measure the collision vertex with high precision in such conditions. In addition, the SPD can also be used for triggering. When a charged particle traverses the detector material, charged carriers are liberated and measured by sensors on the detector. \\
+The next two layers correspond to the SDD which is a silicon drift detector. The working principle bases on the ionization of the detector material by the charged particles that traverse it. The charge carriers drift under the influence of an electric field towards the rands of the detector where they are detected. The layers are capable of detecting multiple tracks at a time. It also contributes to the measurement of the deposited specific energy loss d$E/$d$x$, which is required for the particle identification.\\
+The SSD, which comprises the two outer layers of the ITS, is located near to the TPC in order to match smoothly the track points from the respective detectors. The detector is able to provide track positions in two dimensions as well as specific energy loss information for the identification of particles with low momentum.\\ 
+
 \subsection{TPC}
-%https://www.uni-frankfurt.de/46491136/Generic_46491136.pdf
-explain clusters
+%Unterkapitel und amplification value of 2e4: https://www.uni-frankfurt.de/46491136/Generic_46491136.pdf
+%ALICETPC.png: "The ALICE TPC, a large 3-dimensional tracking device with fast readout for ultra-high multiplicity event"
+The TPC is a hollow cylindric detector with a pseudorapidity coverage of $|\eta| < 0.9 $ filled with a gas mixture (Ne-CO$_2$-N$_2$) that serves as the main tracking device of the ALICE experiment. The detector focuses primary on a three dimensional reconstruction of tracks, particle identification via specific energy loss and determination of collision vertices. It has an inner radius of around 0.85 m that surrounds the ITS and an outer radius of around 2.5 m, while the length is approximately 5 m along the beam direction. This corresponds to a detector volume of 88 m$^3$. In Figure \ref{ALICETPC}, a schematic representation of the ALICE TPC is shown. \\
+When a charged particle traverses the gas mixture of the TPC, electron-ion pairs are created through ionization. The detector volume operates as a field cage which creates a uniform electrostatic field by means of a central high-voltage electrode and two readout chambers located at the opposite endcaps which are used as electrodes. As consequence of the electric field, the freed electrons drift towards the readout planes, which are capable of projecting a two dimensional representation of the track. The measurement of the drift time of the electron provides a third coordinate that allows to reconstruct the track in three dimensions. The magnetic field of the L3 magnet, which is parallel to the electric field, bends the trajectory of the tracks so that the momentum of the particle can be calculated via the Lorentz force.\\
+The two endcaps of the TPC are equipped with multiwire proportional chambers (MWPC), a specific type of gas detector which constitute the readout planes of the TPC. A pad plane at ground potential conforms  the cathode of the detector which is also used as the outer layer of the MWPC. Above the pad plane, three wire planes build the readout chambers. From the outside in, these are a grid of anode wires, a cathode wire plane and a gating grid. \\
+The anode, at positive high voltage, and the cathode, at ground potential, delimit the amplification region. Here, the drifted electrons originated in the TPC volume move under the influence of an electric field which increases with the distance from the anode wires. When the voltage surpasses a certain threshold, electrons carry sufficient energy to ionize atoms through collisions. This leads to a cascade of more free electrons that in turn ionize more atoms. This leads to an avalanche effect that amplifies the initial signal by a factor of $2$x$10^4$ (cite commissioning TPC). The avalanche effect is considered as the main feature of the MWPC. The drift and amplification regions are separated by the gating grid. This instrument remains open after the triggering of an event during the drift time that an electron needs over the full TPC length. The gating grid is closed otherwise to prevent ions from drifting to the TPC volume and causing field distortions.
+\begin{figure}[tb!]
+\centering
+\includegraphics[width=12cm]{Plots/ALICETPC.png}  
+\caption{Schematic design of the ALICE TPC (cite link).}
+\label{ALICETPC}
+\end{figure}
+\subsection{V0 detectors}
+
 \subsection{Track reconstruction}
 Explain track variables  %https://cds.cern.ch/record/2045797/files/Report.pdf
-\subsection{V0 detectors}
-\subsubsection{Centrality determination}
+\subsection{Centrality determination}
 
 \chapter{Analysis}
-Since its theoretical proposal forty years ago, the quark-gluon plasma has been a subject of huge interest in the field of high-energy physics, given that it could offer answers to fundamental questions about the structure of matter. The ALICE experiment at the LHC is dedicated to the study of this exotic state of matter that is believed to form in ultra-relativistic particle collisions. \\
-As discussed in the first chapter of this work, the physics of strongly interacting matter can be investigated by means of the nuclear modification factor $R_\text{AA}$ which compares the yield of inclusive charged particles in AA collisions and a corresponding reference measurement in pp collisions. In this chapter, an analysis of transverse momentum distributions in Pb-Pb and in pp collisions at a center-of-mass energy $\sqrt{s_\text{NN}}= 5.02$ TeV measured with ALICE is presented. First, the selected data samples are detailed. Then, the procedures to correct for detector effects that have an impact on the \pt distributions are described. With these corrected \pt distributions the nuclear modification factors are calculated and the results discussed and compared to previous ALICE measurements (cite paper here).
+Since its theoretical proposal forty years ago, the QGP has been a subject of huge interest in the field of high-energy physics, given that it could offer answers to fundamental questions about the structure of matter. The ALICE experiment at the LHC is dedicated to the study of this exotic state of matter that is believed to form in ultra-relativistic particle collisions. \\
+As discussed in the first chapter of this work, the physics of strongly interacting matter can be investigated by means of the nuclear modification factor $R_\text{AA}$ which compares the yield of inclusive charged particles in AA collisions and a corresponding reference measurement in pp collisions. In this chapter, an analysis of transverse momentum distributions in Pb-Pb and in pp collisions at a centre-of-mass energy $\sqrt{s_\text{NN}}= 5.02$ TeV measured with ALICE is presented. First, the selected data samples are detailed. Then, the procedures to correct for detector effects that have an impact on the \pt distributions are described. With these corrected \pt distributions the nuclear modification factors are calculated and the results discussed and compared to previous ALICE measurements (cite paper here).
 \section{Data sample}
 \begin{table}[tb!]
 \centering
@@ -365,7 +411,7 @@ The MB condition of the ALICE trigger system is able to measure a significant pe
 \label{effTrig}
 \end{equation}
 For each data taking period, the visible cross section is measured by determining the luminosity of the experiment, a quantity that evaluates the number of particle collisions and which is measured in events per time per area. To this purpose, a technique called van-der-Meer scan is used, in which the two particle beams are displaced with respect to each other in the transverse directions and the rate of interactions is monitored as a function of this displacement. The ratio of the head-on rate to the luminosity corresponds then to the desired visible cross section (cite S. vdM). In the studied pp collisions collected in 2017 at $\sqrt{s} = 5.02$ TeV, the visible cross section amounts to $\sigma_\text{vis} = 50.87 \pm 1.07$ mb (cite value). \\
-The total inelastic cross section $\sigma_\text{INEL}$ has not been measured in pp collisions at $\sqrt{s} = 5.02$ TeV. However, a Monte Carlo Glauber model is able to predict by means of a data-driven parametrization the value of $\sigma_\text{INEL}$ as function of the center-of-mass energy 	(cite MC Glauber paper). Here, experimental values from several collaborations are utilized as input. According to the prediction, the total inelastic cross section at $\sqrt{s} = 5.02$ TeV is $\sigma_\text{INEL} = 67.6 \pm 0.6$ mb (cite value). The resulting trigger efficiency is shown in Table \ref{tab:effs}.
+The total inelastic cross section $\sigma_\text{INEL}$ has not been measured in pp collisions at $\sqrt{s} = 5.02$ TeV. However, a Monte Carlo Glauber model is able to predict by means of a data-driven parametrization the value of $\sigma_\text{INEL}$ as function of the centre-of-mass energy 	(cite MC Glauber paper). Here, experimental values from several collaborations are utilized as input. According to the prediction, the total inelastic cross section at $\sqrt{s} = 5.02$ TeV is $\sigma_\text{INEL} = 67.6 \pm 0.6$ mb (cite value). The resulting trigger efficiency is shown in Table \ref{tab:effs}.
 \subsubsection{Vertex reconstruction efficiency}
 The vertex reconstruction efficiency $\epsilon_\text{Vz}$ can be defined as follows:
 \begin{equation}
@@ -446,7 +492,7 @@ The overall efficiency also depends on the type of particle measured. This requi
 \end{figure}
 Among the primary charged particles that compound the studied sample, a disparity in terms of the lifetime is observed. For instance, the pions ($\pi^{\pm}$), the most frequent particle type produced in particle collisions, can travel in average $7.8\text{ m}$ within their lifetime, whereas the sigma baryons ($\Sigma^{\pm}$) have a decay length of only $2.4\text{ cm}$ (cite pdg booklet). As consequence, some particles are more likely to be rejected by the track length requirement than others, which results in the tracking efficiency depending on the particle type. \\
 The usage of MC event generators, such as PYTHIA or HIJING, allows to obtain the tracking efficiencies for different particle species as shown in the left panel of Figure \ref{trckEffParticles}. Here, results from  an analysis of the particle dependent efficiency for pp collisions at $\sqrt{s} = 5.02$ TeV are presented (cite paper). As shown in the Figure, the dependence sof the efficiency on the particle type is strong, especially below $1$ GeV/$c$. In Pb-Pb collisions, similar effects are observed as can be seen in Appendix \ref{TrkEffApp}. Because of these similarities, the correction procedure is only shown for pp collisions, although an analogous procedure is also implemented for Pb-Pb collisions.\\
-Considering the particle type dependence of the efficiency, the abundance of each particle plays an important role and must therefore be reflected in the correction. However, MC event generators have limitations in the description of the particle production, especially regarding strange particles (cite 38,39 paper). As consequence, the efficiency is considerably affected by this underestimation and a correction by means of a re-weighting of the efficiency with the relative abundance of each particle type is implemented. The right plot of Figure \ref{trckEffParticles} shows the relative abundances measured in pp collisions recorded by ALICE at $\sqrt{s} = 7$ TeV. This center-of-mass energy will be used since no significant energy dependence has been observed experimentally and because of the lack of experimental data at the energy studied in this work (cite Patrick). The distributions used in this thesis were calculated by the cited analysis using a data-driven procedure and correspond to he same distributions used in the previous ALICE measurement of nuclear modification factors (cite paper).\\
+Considering the particle type dependence of the efficiency, the abundance of each particle plays an important role and must therefore be reflected in the correction. However, MC event generators have limitations in the description of the particle production, especially regarding strange particles (cite 38,39 paper). As consequence, the efficiency is considerably affected by this underestimation and a correction by means of a re-weighting of the efficiency with the relative abundance of each particle type is implemented. The right plot of Figure \ref{trckEffParticles} shows the relative abundances measured in pp collisions recorded by ALICE at $\sqrt{s} = 7$ TeV. This centre-of-mass energy will be used since no significant energy dependence has been observed experimentally and because of the lack of experimental data at the energy studied in this work (cite Patrick). The distributions used in this thesis were calculated by the cited analysis using a data-driven procedure and correspond to he same distributions used in the previous ALICE measurement of nuclear modification factors (cite paper).\\
 In summary, the overall efficiency for inclusive particles should be understood as a weighted superposition of the individual efficiencies for each particle type with the relative particle abundances. After applying this reweighting on the distributions represented in Figures \ref{trckEffpp} and \ref{trckEffPbPb2} with open symbols, the corrected tracking efficiencies for inclusive particle are obtained and shown in these same figures with full markers. These distributions are utilized ultimately to correct the \pt distributions. 
 \subsection{Contamination by secondary particles}
 The selection procedure described in Section \ref{TrackSelection} aims to reduce the contamination of the measured track sample with secondary particles. Nevertheless, a small amount of these particles persists in it. This remnant originates from weak decays of kaons, $\Lambda$ baryons and muons as well as from interactions with the detector material. The remaining fraction of secondary particles has to be subtracted from the raw \pt distributions to ensure purity of the data.\\
@@ -696,7 +742,7 @@ The invariant yields (see Equation \ref{Eqinyield}) for inclusive charged partic
 \label{invYield}
 \end{figure}
 \subsection{Nuclear modification factors}
-As introduced in Section (cite section), the energy density produced in ultra-relativistic heavy-ion collisions  allows the creation of a quark-gluon plasma, a deconfined state of strongly interacting matter. In this medium, high \pt partons experience an energy loss which leads to a suppression of the particle production as it was suggested by J.D. Bjorken. The study of this suppression can therefore provide insight on the properties of the quark-gluon plasma. In the presented work, the suppression is analyzed through a comparison of the charged-particle production in heavy-ion collisions with a reference measurement in pp collisions, where no quark-gluon plasma is expected to be created. The nuclear modification factor $R_\text{PbPb} $ offers the possibility to quantify the suppression via:
+As introduced in Section (cite section), the energy density produced in ultra-relativistic heavy-ion collisions  allows the creation of a QGP, a deconfined state of strongly interacting matter. In this medium, high \pt partons experience an energy loss which leads to a suppression of the particle production as it was suggested by J.D. Bjorken. The study of this suppression can therefore provide insight on the properties of the QGP. In the presented work, the suppression is analyzed through a comparison of the charged-particle production in heavy-ion collisions with a reference measurement in pp collisions, where no QGP is expected to be created. The nuclear modification factor $R_\text{PbPb} $ offers the possibility to quantify the suppression via:
 \begin{equation}
 R_\text{PbPb} = \dfrac{1}{\langle T_\text{AA}\rangle} \dfrac{\text{d}^2 N^\text{Pb-Pb}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}{\text{d}^2 \sigma^\text{pp}_\text{ch} / \text{d}\eta \text{d}p_\text{T}}
 \end{equation}
